ingress/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mydep
spec:
   replicas: 3
   selector:
     matchLabels:
       app: myapp1
   template:
      metadata:
        labels:
           app: myapp1
      spec:
        containers:
        - name: con1
          image: nginx:latest
          ports:
          - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: mydep-svc
spec:
  ports:
  - port: 80
  selector:
    app: myapp1
---
