ingress/ing.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mydep-ing
spec:
  ingressClassName: nginx
  rules:
  - host: "aneesh.com"
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: mydep-svc
            port:
              number: 80
